[ #3313 ] Added test cases, fix current test cases to fit the new flag
Signed-off-by: ice1000 <ice1000kotlin@foxmail.com>

--- a/test/LaTeXAndHTML/succeed/Indenting7.html
+++ b/test/LaTeXAndHTML/succeed/Indenting7.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Indenting7</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Indenting7</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 \begin{document}
 
-</a>\begin{code}
+</a><a id="61" class="Markup">\begin{code}</a>
 <a id="74" class="Keyword">module</a> <a id="81" href="Indenting7.html" class="Module">Indenting7</a> <a id="92" class="Keyword">where</a>
 
   <a id="101" class="Keyword">module</a> <a id="A₁"></a><a id="108" href="Indenting7.html#108" class="Module">A₁</a> <a id="111" class="Keyword">where</a>
@@ -28,7 +28,7 @@
       <a id="406" class="Keyword">module</a> <a id="C₆"></a><a id="413" href="Indenting7.html#413" class="Module">C₆</a> <a id="416" class="Keyword">where</a>
     <a id="426" class="Keyword">module</a> <a id="B₄"></a><a id="433" href="Indenting7.html#433" class="Module">B₄</a> <a id="436" class="Keyword">where</a>
   <a id="444" class="Keyword">module</a> <a id="A₄"></a><a id="451" href="Indenting7.html#451" class="Module">A₄</a> <a id="454" class="Keyword">where</a>
-\end{code}<a id="470" class="Comment">
+<a id="460" class="Markup">\end{code}</a><a id="470" class="Background">
 
 \end{document}
 </a></pre></body></html>
