--- a/test/LaTeXAndHTML/succeed/Issue1241.html
+++ b/test/LaTeXAndHTML/succeed/Issue1241.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue1241</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue1241</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
@@ -9,12 +9,12 @@
 
 This is the actual test.
 
-</a>\begin{code}
+</a><a id="101" class="Markup">\begin{code}</a>
 <a id="114" class="Keyword">module</a> <a id="121" href="Issue1241.html" class="Module">_</a> <a id="123" class="Keyword">where</a>
 
 <a id="130" class="Keyword">postulate</a>
   <a id="IsThisCorrectlyLaTeXed"></a><a id="142" href="Issue1241.html#142" class="Postulate">IsThisCorrectlyLaTeXed</a> <a id="165" class="Symbol">:</a> <a id="167" class="PrimitiveType">Set</a>
-\end{code}<a id="181" class="Comment">
+<a id="171" class="Markup">\end{code}</a><a id="181" class="Background">
 
 \end{document}
 </a></pre></body></html>
