--- a/test/LaTeXAndHTML/succeed/Issue2401.html
+++ b/test/LaTeXAndHTML/succeed/Issue2401.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2401</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">% The example below is, modulo a small change, due to Andrés
+<html><head><meta charset="utf-8"><title>Issue2401</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">% The example below is, modulo a small change, due to Andrés
 % Sicard-Ramírez.
 
 \documentclass{article}
@@ -9,7 +9,7 @@
 \begin{document}
 
 av
-</a>\begin{code}
+</a><a id="146" class="Markup">\begin{code}</a>
   <a id="161" class="Keyword">module</a> <a id="168" href="Issue2401.html" class="Module">Issue2401</a> <a id="178" class="Keyword">where</a>
 
     <a id="189" class="Keyword">data</a> <a id="Bool"></a><a id="194" href="Issue2401.html#194" class="Datatype">Bool</a> <a id="199" class="Symbol">:</a> <a id="201" class="PrimitiveType">Set</a> <a id="205" class="Keyword">where</a>
@@ -18,7 +18,7 @@ av
       <a id="Bool.dunno"></a><a id="255" href="Issue2401.html#255" class="InductiveConstructor">dunno</a> <a id="261" class="Symbol">:</a> <a id="263" href="Issue2401.html#194" class="Datatype">Bool</a>
       <a id="Bool.aa"></a><a id="274" href="Issue2401.html#274" class="InductiveConstructor">aa</a>    <a id="280" class="Symbol">:</a> <a id="282" class="Comment">{- \end{code} -}</a> <a id="299" href="Issue2401.html#194" class="Datatype">Bool</a>
 
-\end{code}<a id="315" class="Comment">
+<a id="305" class="Markup">\end{code}</a><a id="315" class="Background">
 bleh
 
 \end{document}</a></pre></body></html>
