--- a/test/LaTeXAndHTML/succeed/Issue2588.html
+++ b/test/LaTeXAndHTML/succeed/Issue2588.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2588</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2588</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="63" class="Markup">\begin{code}</a>
 <a id="76" class="Keyword">module</a> <a id="83" href="Issue2588.html" class="Module">Issue2588</a> <a id="93" class="Keyword">where</a>
 
 <a id="100" class="Comment">{-
 -}</a>
-\end{code}<a id="116" class="Comment">
+<a id="106" class="Markup">\end{code}</a><a id="116" class="Background">
 
 \end{document}
 </a></pre></body></html>
