--- a/test/LaTeXAndHTML/succeed/Issue2733-1.html
+++ b/test/LaTeXAndHTML/succeed/Issue2733-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2733-1</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2733-1</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
@@ -9,12 +9,12 @@ No indentation should be inserted before \AgdaKeyword{postulate} or
 the last occurrence of \AgdaPrimitiveType{Set}, and the last
 occurrence of \AgdaPrimitiveType{Set} should be aligned with the
 penultimate occurrence of \AgdaPrimitiveType{Set}:
-</a>\begin{code}
+</a><a id="308" class="Markup">\begin{code}</a>
   <a id="323" class="Keyword">postulate</a>
     <a id="A"></a><a id="337" href="Issue2733-1.html#337" class="Postulate">A</a>  <a id="340" class="Symbol">:</a> <a id="342" class="PrimitiveType">Set</a>
     <a id="B"></a><a id="350" href="Issue2733-1.html#350" class="Postulate">B</a>  <a id="353" class="Symbol">:</a> <a id="355" class="PrimitiveType">Set</a> <a id="359" class="Symbol">→</a>
          <a id="370" class="PrimitiveType">Set</a>
-\end{code}<a id="384" class="Comment">
+<a id="374" class="Markup">\end{code}</a><a id="384" class="Background">
 
 \end{document}
 </a></pre></body></html>
