--- a/test/LaTeXAndHTML/succeed/Issue2733-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2733-2.html
@@ -1,24 +1,24 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2733-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2733-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
 \begin{AgdaAlign}
-</a>\begin{code}
+</a><a id="81" class="Markup">\begin{code}</a>
 <a id="94" class="Keyword">module</a> <a id="101" href="Issue2733-2.html" class="Module">Issue2733-2</a> <a id="113" class="Keyword">where</a>
-\end{code}<a id="129" class="Comment">
+<a id="119" class="Markup">\end{code}</a><a id="129" class="Background">
 
 Indentation should be inserted before \AgdaKeyword{postulate}, but not
 before the last occurrence of \AgdaPrimitiveType{Set}, which should be
 aligned with the penultimate occurrence of \AgdaPrimitiveType{Set}:
-</a>\begin{code}
+</a><a id="341" class="Markup">\begin{code}</a>
   <a id="356" class="Keyword">postulate</a>
     <a id="A"></a><a id="370" href="Issue2733-2.html#370" class="Postulate">A</a>  <a id="373" class="Symbol">:</a> <a id="375" class="PrimitiveType">Set</a>
     <a id="B"></a><a id="383" href="Issue2733-2.html#383" class="Postulate">B</a>  <a id="386" class="Symbol">:</a> <a id="388" class="PrimitiveType">Set</a> <a id="392" class="Symbol">→</a>
          <a id="403" class="PrimitiveType">Set</a>
-\end{code}<a id="417" class="Comment">
+<a id="407" class="Markup">\end{code}</a><a id="417" class="Background">
 \end{AgdaAlign}
 
 \end{document}
