--- a/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.html
+++ b/test/LaTeXAndHTML/succeed/Legacy-AgdaIndent.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Legacy-AgdaIndent</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Legacy-AgdaIndent</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
@@ -8,10 +8,10 @@
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="162" class="Markup">\begin{code}</a>
 <a id="175" class="Keyword">postulate</a>
   <a id="Whatever"></a><a id="187" href="Legacy-AgdaIndent.html#187" class="Postulate">Whatever</a> <a id="196" class="Symbol">:</a> <a id="198" class="PrimitiveType">Set</a>
-\end{code}<a id="212" class="Comment">
+<a id="202" class="Markup">\end{code}</a><a id="212" class="Background">
 
 \end{document}
 </a></pre></body></html>
