--- a/test/LaTeXAndHTML/succeed/MdOneLine.html
+++ b/test/LaTeXAndHTML/succeed/MdOneLine.html
@@ -1,3 +1,3 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>MdOneLine</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">Hello, this is ``` postulate Truth : Set </a>```
-</pre></body></html>
+<html><head><meta charset="utf-8"><title>MdOneLine</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">Hello, this is ``` postulate Truth : Set </a><a id="42" class="Markup">```
+</a></pre></body></html>
