--- a/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
+++ b/test/LaTeXAndHTML/succeed/NoNewLinesVsNewLines.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>NoNewLinesVsNewLines</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>NoNewLinesVsNewLines</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="63" class="Markup">\begin{code}</a>
 <a id="76" class="Keyword">module</a> <a id="83" href="NoNewLinesVsNewLines.html" class="Module">NoNewLinesVsNewLines</a> <a id="104" class="Keyword">where</a>
-\end{code}<a id="120" class="Comment">
+<a id="110" class="Markup">\end{code}</a><a id="120" class="Background">
 
-</a>\begin{code}
+</a><a id="122" class="Markup">\begin{code}</a>
 
 <a id="136" class="Keyword">module</a> <a id="Test2"></a><a id="143" href="NoNewLinesVsNewLines.html#143" class="Module">Test2</a> <a id="149" class="Keyword">where</a>
 
-\end{code}<a id="166" class="Comment">
+<a id="156" class="Markup">\end{code}</a><a id="166" class="Background">
 
 \end{document}
 </a></pre></body></html>
