--- a/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
+++ b/test/LaTeXAndHTML/succeed/OneSpaceIndent.html
@@ -1,31 +1,31 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>OneSpaceIndent</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>OneSpaceIndent</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 
 \begin{document}
 
 \AgdaHide{
-</a>\begin{code}
+</a><a id="73" class="Markup">\begin{code}</a>
 <a id="86" class="Keyword">module</a> <a id="93" href="OneSpaceIndent.html" class="Module">OneSpaceIndent</a> <a id="108" class="Keyword">where</a>
-\end{code}<a id="124" class="Comment">
+<a id="114" class="Markup">\end{code}</a><a id="124" class="Background">
 }
 
 \section{Syntax}
 Text1
 
 \AgdaHide{
-</a>\begin{code}
+</a><a id="163" class="Markup">\begin{code}</a>
 <a id="176" class="Keyword">module</a> <a id="Defs"></a><a id="183" href="OneSpaceIndent.html#183" class="Module">Defs</a> <a id="188" class="Keyword">where</a>
 
  <a id="196" class="Keyword">postulate</a>
-\end{code}<a id="216" class="Comment">
+<a id="206" class="Markup">\end{code}</a><a id="216" class="Background">
 }
 
 Text2
 
-</a>\begin{code}
+</a><a id="227" class="Markup">\begin{code}</a>
   <a id="Defs.Base"></a><a id="242" href="OneSpaceIndent.html#242" class="Postulate">Base</a> <a id="247" class="Symbol">:</a> <a id="249" class="PrimitiveType">Set</a>
-\end{code}<a id="263" class="Comment">
+<a id="253" class="Markup">\end{code}</a><a id="263" class="Background">
 
 Text3
 \end{document}
