--- a/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/RsTQuotedDelim.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>RsTQuotedDelim</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">av
-</a>::
-  <a id="9" class="Keyword">module</a> <a id="16" href="RsTQuotedDelim.html" class="Module">RsTQuotedDelim</a> <a id="31" class="Keyword">where</a>
+<html><head><meta charset="utf-8"><title>RsTQuotedDelim</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">av
+</a><a id="4" class="Markup">::
+</a>  <a id="9" class="Keyword">module</a> <a id="16" href="RsTQuotedDelim.html" class="Module">RsTQuotedDelim</a> <a id="31" class="Keyword">where</a>
 
        <a id="45" class="Keyword">data</a> <a id="Bool"></a><a id="50" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a> <a id="55" class="Symbol">:</a> <a id="57" class="PrimitiveType">Set</a> <a id="61" class="Keyword">where</a>
         <a id="Bool.true"></a><a id="75" href="RsTQuotedDelim.html#75" class="InductiveConstructor">true</a> <a id="80" class="Symbol">:</a> <a id="82" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a>
@@ -9,7 +9,7 @@
         <a id="Bool.dunno"></a><a id="116" href="RsTQuotedDelim.html#116" class="InductiveConstructor">dunno</a> <a id="122" class="Symbol">:</a> <a id="124" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a>
         <a id="Bool.aa"></a><a id="137" href="RsTQuotedDelim.html#137" class="InductiveConstructor">aa</a> <a id="140" class="Symbol">:</a> <a id="142" class="Comment">{- :: -}</a> <a id="151" href="RsTQuotedDelim.html#50" class="Datatype">Bool</a>
 
-<a id="157" class="Comment">blip :: blop
+<a id="157" class="Background">blip :: blop
 
        a : Bool
        a = bb
