--- a/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.html
+++ b/test/LaTeXAndHTML/succeed/AccidentalSpacesBeforeEndCode.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>AccidentalSpacesBeforeEndCode</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>AccidentalSpacesBeforeEndCode</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="63" class="Markup">\begin{code}</a>
 <a id="76" class="Keyword">module</a> <a id="83" href="AccidentalSpacesBeforeEndCode.html" class="Module">AccidentalSpacesBeforeEndCode</a> <a id="113" class="Keyword">where</a>
-  \end{code}<a id="131" class="Comment">
+  <a id="121" class="Markup">\end{code}</a><a id="131" class="Background">
 
 \end{document}
 </a></pre></body></html>
