--- a/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
+++ b/test/LaTeXAndHTML/succeed/EscapedTeXComment.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>EscapedTeXComment</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>EscapedTeXComment</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-100\% postulated: </a>\begin{code}
+100\% postulated: </a><a id="81" class="Markup">\begin{code}</a>
 <a id="94" class="Keyword">postulate</a> <a id="A"></a><a id="104" href="EscapedTeXComment.html#104" class="Postulate">A</a> <a id="106" class="Symbol">:</a> <a id="108" class="PrimitiveType">Set</a>
-\end{code}<a id="122" class="Comment">
+<a id="112" class="Markup">\end{code}</a><a id="122" class="Background">
 
 \end{document}
 </a></pre></body></html>
