--- a/test/LaTeXAndHTML/succeed/Grapheme-clusters.html
+++ b/test/LaTeXAndHTML/succeed/Grapheme-clusters.html
@@ -1,22 +1,22 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Grapheme-clusters</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Grapheme-clusters</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
 \AgdaPostulate{A} and \AgdaPostulate{B} should be aligned:
-</a>\begin{code}
+</a><a id="122" class="Markup">\begin{code}</a>
   <a id="137" class="Keyword">postulate</a>
     <a id="+̲+̲+̲+̲+̲+̲"></a><a id="151" href="Grapheme-clusters.html#151" class="Postulate">+̲+̲+̲+̲+̲+̲</a>  <a id="A"></a><a id="165" href="Grapheme-clusters.html#165" class="Postulate">A</a>
             <a id="B"></a><a id="179" href="Grapheme-clusters.html#179" class="Postulate">B</a> <a id="181" class="Symbol">:</a> <a id="183" class="PrimitiveType">Set</a>
-\end{code}<a id="197" class="Comment">
+<a id="187" class="Markup">\end{code}</a><a id="197" class="Background">
 
 The two \AgdaKeyword{field} keywords should not be aligned:
-</a>\begin{code}
+</a><a id="259" class="Markup">\begin{code}</a>
   <a id="274" class="Keyword">record</a> <a id="+̲"></a><a id="281" href="Grapheme-clusters.html#281" class="Record">+̲</a> <a id="284" class="Symbol">:</a> <a id="286" class="PrimitiveType">Set₁</a> <a id="291" class="Keyword">where</a>  <a id="298" class="Keyword">field</a> <a id="+̲.C"></a><a id="304" href="Grapheme-clusters.html#304" class="Field">C</a> <a id="306" class="Symbol">:</a> <a id="308" class="PrimitiveType">Set</a>
                           <a id="338" class="Keyword">field</a> <a id="+̲.D"></a><a id="344" href="Grapheme-clusters.html#344" class="Field">D</a> <a id="346" class="Symbol">:</a> <a id="348" class="PrimitiveType">Set</a>
-\end{code}<a id="362" class="Comment">
+<a id="352" class="Markup">\end{code}</a><a id="362" class="Background">
 
 \end{document}
 </a></pre></body></html>
