--- a/test/LaTeXAndHTML/succeed/Indenting2.html
+++ b/test/LaTeXAndHTML/succeed/Indenting2.html
@@ -1,15 +1,15 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Indenting2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Indenting2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="63" class="Markup">\begin{code}</a>
 <a id="76" class="Keyword">data</a> <a id="Nat"></a><a id="81" href="Indenting2.html#81" class="Datatype">Nat</a> <a id="85" class="Symbol">:</a> <a id="87" class="PrimitiveType">Set</a> <a id="91" class="Keyword">where</a>
   <a id="Nat.zero"></a><a id="99" href="Indenting2.html#99" class="InductiveConstructor">zero</a>  <a id="105" class="Symbol">:</a> <a id="107" href="Indenting2.html#81" class="Datatype">Nat</a>
   <a id="Nat.suc"></a><a id="113" href="Indenting2.html#113" class="InductiveConstructor">suc</a>   <a id="119" class="Symbol">:</a> <a id="121" href="Indenting2.html#81" class="Datatype">Nat</a> <a id="125" class="Symbol">-&gt;</a> <a id="128" href="Indenting2.html#81" class="Datatype">Nat</a>
-\end{code}<a id="142" class="Comment">
+<a id="132" class="Markup">\end{code}</a><a id="142" class="Background">
 
 \end{document}
 </a></pre></body></html>
