--- a/test/LaTeXAndHTML/succeed/Indenting4.html
+++ b/test/LaTeXAndHTML/succeed/Indenting4.html
@@ -1,18 +1,18 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Indenting4</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Indenting4</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="63" class="Markup">\begin{code}</a>
 <a id="76" class="Keyword">module</a> <a id="83" href="Indenting4.html" class="Module">Indenting4</a> <a id="94" class="Keyword">where</a>
-\end{code}<a id="110" class="Comment">
+<a id="100" class="Markup">\end{code}</a><a id="110" class="Background">
 
-</a>\begin{code}
+</a><a id="112" class="Markup">\begin{code}</a>
   <a id="Pow"></a><a id="127" href="Indenting4.html#127" class="Function">Pow</a> <a id="131" class="Symbol">:</a> <a id="133" class="PrimitiveType">Set</a> <a id="137" class="Symbol">→</a> <a id="139" class="PrimitiveType">Set₁</a>
   <a id="146" href="Indenting4.html#127" class="Function">Pow</a> <a id="150" href="Indenting4.html#150" class="Bound">X</a> <a id="152" class="Symbol">=</a> <a id="154" href="Indenting4.html#150" class="Bound">X</a> <a id="156" class="Symbol">→</a> <a id="158" class="PrimitiveType">Set</a>
-\end{code}<a id="172" class="Comment">
+<a id="162" class="Markup">\end{code}</a><a id="172" class="Background">
 
 \end{document}
 </a></pre></body></html>
