--- a/test/LaTeXAndHTML/succeed/Issue1618.html
+++ b/test/LaTeXAndHTML/succeed/Issue1618.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue1618</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue1618</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1ex}
 \begin{document}
 The let should be properly aligned in the following code:
 
-</a>\begin{code}
+</a><a id="173" class="Markup">\begin{code}</a>
 <a id="id"></a><a id="186" href="Issue1618.html#186" class="Function">id</a> <a id="189" class="Symbol">:</a> <a id="191" class="Symbol">(</a><a id="192" href="Issue1618.html#192" class="Bound">A</a> <a id="194" class="Symbol">:</a> <a id="196" class="PrimitiveType">Set</a><a id="199" class="Symbol">)</a> <a id="201" class="Symbol">→</a> <a id="203" href="Issue1618.html#192" class="Bound">A</a> <a id="205" class="Symbol">→</a> <a id="207" href="Issue1618.html#192" class="Bound">A</a>
 <a id="209" href="Issue1618.html#186" class="Function">id</a> <a id="212" href="Issue1618.html#212" class="Bound">A</a> <a id="214" class="Symbol">=</a>
   <a id="218" class="Keyword">let</a>
@@ -16,12 +16,12 @@ The let should be properly aligned in the following code:
   <a id="267" class="Keyword">where</a>
     <a id="277" href="Issue1618.html#277" class="Function">B</a> <a id="279" class="Symbol">:</a> <a id="281" class="PrimitiveType">Set</a>
     <a id="289" href="Issue1618.html#277" class="Function">B</a> <a id="291" class="Symbol">=</a> <a id="293" href="Issue1618.html#212" class="Bound">A</a>
-\end{code}<a id="305" class="Comment">
+<a id="295" class="Markup">\end{code}</a><a id="305" class="Background">
 
 This should also work if the new block is following after the
 keyword, as opposed to on a new line.
 
-</a>\begin{code}
+</a><a id="408" class="Markup">\begin{code}</a>
 <a id="di"></a><a id="421" href="Issue1618.html#421" class="Function">di</a> <a id="424" class="Symbol">:</a> <a id="426" class="Symbol">(</a><a id="427" href="Issue1618.html#427" class="Bound">A</a> <a id="429" class="Symbol">:</a> <a id="431" class="PrimitiveType">Set</a><a id="434" class="Symbol">)</a> <a id="436" class="Symbol">→</a> <a id="438" href="Issue1618.html#427" class="Bound">A</a> <a id="440" class="Symbol">→</a> <a id="442" href="Issue1618.html#427" class="Bound">A</a>
 <a id="444" href="Issue1618.html#421" class="Function">di</a> <a id="447" href="Issue1618.html#447" class="Bound">A</a> <a id="449" class="Symbol">=</a>
   <a id="453" class="Keyword">let</a>  <a id="458" href="Issue1618.html#458" class="Bound">id&#39;</a> <a id="462" class="Symbol">:</a> <a id="464" href="Issue1618.html#509" class="Function">B</a> <a id="466" class="Symbol">→</a> <a id="468" href="Issue1618.html#509" class="Function">B</a>
@@ -29,6 +29,6 @@ keyword, as opposed to on a new line.
   <a id="493" class="Keyword">in</a> <a id="496" href="Issue1618.html#458" class="Bound">id&#39;</a>
   <a id="502" class="Keyword">where</a>  <a id="509" href="Issue1618.html#509" class="Function">B</a> <a id="511" class="Symbol">:</a> <a id="513" class="PrimitiveType">Set</a>
          <a id="526" href="Issue1618.html#509" class="Function">B</a> <a id="528" class="Symbol">=</a> <a id="530" href="Issue1618.html#447" class="Bound">A</a>
-\end{code}<a id="542" class="Comment">
+<a id="532" class="Markup">\end{code}</a><a id="542" class="Background">
 \end{document}
 </a></pre></body></html>
