--- a/test/LaTeXAndHTML/succeed/Issue2077-1.html
+++ b/test/LaTeXAndHTML/succeed/Issue2077-1.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2077-1</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2077-1</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 
 \begin{document}
 
 \AgdaHide{
-Blip</a>\begin{code}
+Blip</a><a id="77" class="Markup">\begin{code}</a>
 <a id="90" class="Keyword">postulate</a> <a id="A"></a><a id="100" href="Issue2077-1.html#100" class="Postulate">A</a> <a id="102" class="Symbol">:</a> <a id="104" class="PrimitiveType">Set</a>
-\end{code}<a id="118" class="Comment">}Blop
+<a id="108" class="Markup">\end{code}</a><a id="118" class="Background">}Blop
 
 \end{document}
 </a></pre></body></html>
