--- a/test/LaTeXAndHTML/succeed/Issue2077-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2077-2.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2077-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2077-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 
 \begin{document}
 
 \AgdaHide{
-</a>\begin{code}
+</a><a id="73" class="Markup">\begin{code}</a>
 <a id="86" class="Keyword">postulate</a> <a id="A"></a><a id="96" href="Issue2077-2.html#96" class="Postulate">A</a> <a id="98" class="Symbol">:</a> <a id="100" class="PrimitiveType">Set</a>
-\end{code}<a id="114" class="Comment">}
+<a id="104" class="Markup">\end{code}</a><a id="114" class="Background">}
 
 \end{document}
 </a></pre></body></html>
