--- a/test/LaTeXAndHTML/succeed/Issue2445.html
+++ b/test/LaTeXAndHTML/succeed/Issue2445.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2445</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2445</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="44" class="Markup">\begin{code}</a>
 <a id="57" class="Keyword">module</a> <a id="64" href="Issue2445.html" class="Module">_</a> <a id="66" class="Keyword">where</a>
 <a id="72" class="Keyword">module</a> <a id="79" href="Issue2445.html#79" class="Module">_</a> <a id="81" class="Keyword">where</a>
 <a id="87" class="Keyword">module</a> <a id="94" href="Issue2445.html#94" class="Module">_</a> <a id="96" class="Keyword">where</a>
@@ -804,7 +804,7 @@
 <a id="12012" class="Keyword">module</a> <a id="12019" href="Issue2445.html#12019" class="Module">_</a> <a id="12021" class="Keyword">where</a>
 <a id="12027" class="Keyword">module</a> <a id="12034" href="Issue2445.html#12034" class="Module">_</a> <a id="12036" class="Keyword">where</a>
 <a id="12042" class="Keyword">module</a> <a id="12049" href="Issue2445.html#12049" class="Module">_</a> <a id="12051" class="Keyword">where</a>
-\end{code}<a id="12067" class="Comment">
+<a id="12057" class="Markup">\end{code}</a><a id="12067" class="Background">
 
 \end{document}
 </a></pre></body></html>
