--- a/test/LaTeXAndHTML/succeed/Issue2474-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2474-2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2474-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2474-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 \begin{document}
 
-</a>\begin{code}
+</a><a id="61" class="Markup">\begin{code}</a>
 <a id="74" class="Keyword">import</a> <a id="81" href="Issue2474.html" class="Module">Issue2474</a>
-\end{code}<a id="101" class="Comment">
+<a id="91" class="Markup">\end{code}</a><a id="101" class="Background">
 \end{document}
 </a></pre></body></html>
