--- a/test/LaTeXAndHTML/succeed/Issue2474.html
+++ b/test/LaTeXAndHTML/succeed/Issue2474.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2474</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2474</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 \begin{document}
 
-</a>\begin{code}
+</a><a id="61" class="Markup">\begin{code}</a>
 <a id="74" class="Symbol">{-#</a> <a id="78" class="Keyword">OPTIONS</a> <a id="86" class="Option">--allow-unsolved-metas</a> <a id="109" class="Symbol">#-}</a>
 
 <a id="114" class="Keyword">postulate</a>
@@ -11,6 +11,6 @@
 
 <a id="A"></a><a id="147" href="Issue2474.html#147" class="Function">A</a> <a id="149" class="Symbol">:</a> <a id="151" class="PrimitiveType">Set</a>
 <a id="155" href="Issue2474.html#147" class="Function">A</a> <a id="157" class="Symbol">=</a> <a id="159" href="Issue2474.html#126" class="UnsolvedMeta Postulate">F</a>
-\end{code}<a id="171" class="Comment">
+<a id="161" class="Markup">\end{code}</a><a id="171" class="Background">
 \end{document}
 </a></pre></body></html>
