--- a/test/LaTeXAndHTML/succeed/Issue2623.html
+++ b/test/LaTeXAndHTML/succeed/Issue2623.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2623</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2623</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
@@ -9,20 +9,20 @@
 
 \noindent Text.
 \AgdaHide{
-</a>\begin{code}
+</a><a id="109" class="Markup">\begin{code}</a>
   <a id="124" class="Keyword">mutual</a>
-\end{code}<a id="141" class="Comment">}
-</a>\begin{code}
+<a id="131" class="Markup">\end{code}</a><a id="141" class="Background">}
+</a><a id="143" class="Markup">\begin{code}</a>
     <a id="160" class="Keyword">postulate</a> <a id="A"></a><a id="170" href="Issue2623.html#170" class="Postulate">A</a> <a id="172" class="Symbol">:</a> <a id="174" class="PrimitiveType">Set</a>
-\end{code}<a id="188" class="Comment">
+<a id="178" class="Markup">\end{code}</a><a id="188" class="Background">
 More text.
 \begin{AgdaMultiCode}
-</a>\begin{code}
+</a><a id="222" class="Markup">\begin{code}</a>
   <a id="237" class="Keyword">mutual</a>
-\end{code}<a id="254" class="Comment">
-</a>\begin{code}
+<a id="244" class="Markup">\end{code}</a><a id="254" class="Background">
+</a><a id="255" class="Markup">\begin{code}</a>
     <a id="272" class="Keyword">postulate</a> <a id="B"></a><a id="282" href="Issue2623.html#282" class="Postulate">B</a> <a id="284" class="Symbol">:</a> <a id="286" class="PrimitiveType">Set</a>
-\end{code}<a id="300" class="Comment">
+<a id="290" class="Markup">\end{code}</a><a id="300" class="Background">
 \end{AgdaMultiCode}
 Even more text.
 
