--- a/test/LaTeXAndHTML/succeed/Issue2734.html
+++ b/test/LaTeXAndHTML/succeed/Issue2734.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2734</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2734</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
@@ -10,12 +10,12 @@
 \thispagestyle{empty}
 
 Text.
-</a>\begin{code}
+</a><a id="139" class="Markup">\begin{code}</a>
   <a id="154" class="Keyword">postulate</a>
     <a id="A"></a><a id="168" href="Issue2734.html#168" class="Postulate">A</a>  <a id="171" class="Symbol">:</a> <a id="173" class="PrimitiveType">Set</a>
 
     <a id="B"></a><a id="182" href="Issue2734.html#182" class="Postulate">B</a>  <a id="185" class="Symbol">:</a> <a id="187" class="PrimitiveType">Set</a>
-\end{code}<a id="201" class="Comment">
+<a id="191" class="Markup">\end{code}</a><a id="201" class="Background">
 More text.
 
 \end{document}
