--- a/test/LaTeXAndHTML/succeed/Issue2740-2.html
+++ b/test/LaTeXAndHTML/succeed/Issue2740-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Issue2740-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Issue2740-2</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
@@ -8,9 +8,9 @@
 \begin{document}
 
 \noindent Beginning of line.
-</a>\begin{code}
+</a><a id="111" class="Markup">\begin{code}</a>
   <a id="126" class="Keyword">postulate</a> <a id="A"></a><a id="136" href="Issue2740-2.html#136" class="Postulate">A</a> <a id="138" class="Symbol">:</a> <a id="140" class="PrimitiveType">Set</a>
-\end{code}<a id="154" class="Comment">
+<a id="144" class="Markup">\end{code}</a><a id="154" class="Background">
 
 \end{document}
 </a></pre></body></html>
