--- a/test/LaTeXAndHTML/succeed/MdQuotedDelim.html
+++ b/test/LaTeXAndHTML/succeed/MdQuotedDelim.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>MdQuotedDelim</title><link rel="stylesheet" href="Agda.css"></head><body><pre>```
-  <a id="7" class="Keyword">module</a> <a id="14" href="MdQuotedDelim.html" class="Module">MdQuotedDelim</a> <a id="28" class="Keyword">where</a>
+<html><head><meta charset="utf-8"><title>MdQuotedDelim</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Markup">```
+</a>  <a id="7" class="Keyword">module</a> <a id="14" href="MdQuotedDelim.html" class="Module">MdQuotedDelim</a> <a id="28" class="Keyword">where</a>
 
         <a id="43" class="Keyword">data</a> <a id="Bool"></a><a id="48" href="MdQuotedDelim.html#48" class="Datatype">Bool</a> <a id="53" class="Symbol">:</a> <a id="55" class="PrimitiveType">Set</a> <a id="59" class="Keyword">where</a>
             <a id="Bool.true"></a><a id="77" href="MdQuotedDelim.html#77" class="InductiveConstructor">true</a> <a id="82" class="Symbol">:</a> <a id="84" href="MdQuotedDelim.html#48" class="Datatype">Bool</a>
@@ -9,5 +9,5 @@
 
         <a id="a"></a><a id="155" href="MdQuotedDelim.html#155" class="Function">a</a> <a id="157" class="Symbol">:</a> <a id="159" href="MdQuotedDelim.html#48" class="Datatype">Bool</a>
         <a id="172" href="MdQuotedDelim.html#155" class="Function">a</a> <a id="174" class="Symbol">=</a> <a id="176" href="MdQuotedDelim.html#77" class="InductiveConstructor">true</a>
-```
-</pre></body></html>
+<a id="181" class="Markup">```
+</a></pre></body></html>
