--- a/test/LaTeXAndHTML/succeed/Multiline.html
+++ b/test/LaTeXAndHTML/succeed/Multiline.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Multiline</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Multiline</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 \begin{document}
-</a>\begin{code}
+</a><a id="60" class="Markup">\begin{code}</a>
 <a id="73" class="Keyword">open</a> <a id="78" class="Keyword">import</a> <a id="85" href="Agda.Builtin.String.html" class="Module">Agda.Builtin.String</a>
 
 <a id="argh"></a><a id="106" href="Multiline.html#106" class="Function">argh</a> <a id="111" class="Symbol">:</a> <a id="113" href="Agda.Builtin.String.html#174" class="Postulate">String</a>
 <a id="120" href="Multiline.html#106" class="Function">argh</a> <a id="125" class="Symbol">=</a>  <a id="128" class="String">&quot;Hello,\
         \World!&quot;</a>
-\end{code}<a id="164" class="Comment">
+<a id="154" class="Markup">\end{code}</a><a id="164" class="Background">
 \end{document}
 </a></pre></body></html>
