--- a/test/LaTeXAndHTML/succeed/Options.html
+++ b/test/LaTeXAndHTML/succeed/Options.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Options</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Options</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="63" class="Markup">\begin{code}</a>
 <a id="76" class="Symbol">{-#</a> <a id="80" class="Keyword">OPTIONS</a>  <a id="89" class="Option">--no-positivity-check</a>
              <a id="124" class="Option">--no-termination-check</a> <a id="147" class="Symbol">#-}</a>
-\end{code}<a id="161" class="Comment">
+<a id="151" class="Markup">\end{code}</a><a id="161" class="Background">
 
 \end{document}
 </a></pre></body></html>
