--- a/test/LaTeXAndHTML/succeed/PatternSynonyms.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>PatternSynonyms</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>PatternSynonyms</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 \begin{document}
 
-</a>\begin{code}
+</a><a id="61" class="Markup">\begin{code}</a>
 <a id="74" class="Keyword">data</a> <a id="Nat"></a><a id="79" href="PatternSynonyms.html#79" class="Datatype">Nat</a> <a id="83" class="Symbol">:</a> <a id="85" class="PrimitiveType">Set</a> <a id="89" class="Keyword">where</a>
   <a id="Nat.zero"></a><a id="97" href="PatternSynonyms.html#97" class="InductiveConstructor">zero</a> <a id="102" class="Symbol">:</a> <a id="104" href="PatternSynonyms.html#79" class="Datatype">Nat</a>
   <a id="Nat.suc"></a><a id="110" href="PatternSynonyms.html#110" class="InductiveConstructor">suc</a> <a id="114" class="Symbol">:</a> <a id="116" href="PatternSynonyms.html#79" class="Datatype">Nat</a> <a id="120" class="Symbol">→</a> <a id="122" href="PatternSynonyms.html#79" class="Datatype">Nat</a>
@@ -12,7 +12,7 @@
 <a id="158" class="Keyword">pattern</a> <a id="three"></a><a id="166" href="PatternSynonyms.html#166" class="InductiveConstructor">three</a> <a id="172" class="Symbol">=</a> <a id="174" href="PatternSynonyms.html#110" class="InductiveConstructor">suc</a> <a id="178" href="PatternSynonyms.html#135" class="InductiveConstructor">two</a>
 
 <a id="183" class="Keyword">data</a> <a id="Bot"></a><a id="188" href="PatternSynonyms.html#188" class="Datatype">Bot</a> <a id="192" class="Symbol">:</a> <a id="194" class="PrimitiveType">Set</a> <a id="198" class="Keyword">where</a>
-\end{code}<a id="214" class="Comment">
+<a id="204" class="Markup">\end{code}</a><a id="214" class="Background">
 
 \end{document}
 </a></pre></body></html>
