--- a/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
+++ b/test/LaTeXAndHTML/succeed/PatternSynonyms3.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>PatternSynonyms3</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>PatternSynonyms3</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 \begin{document}
 
-</a>\begin{code}
+</a><a id="61" class="Markup">\begin{code}</a>
 <a id="74" class="Keyword">data</a> <a id="Nat"></a><a id="79" href="PatternSynonyms3.html#79" class="Datatype">Nat</a> <a id="83" class="Symbol">:</a> <a id="85" class="PrimitiveType">Set</a> <a id="89" class="Keyword">where</a>
   <a id="Nat.zero"></a><a id="97" href="PatternSynonyms3.html#97" class="InductiveConstructor">zero</a> <a id="102" class="Symbol">:</a> <a id="104" href="PatternSynonyms3.html#79" class="Datatype">Nat</a>
   <a id="Nat.suc"></a><a id="110" href="PatternSynonyms3.html#110" class="InductiveConstructor">suc</a> <a id="114" class="Symbol">:</a> <a id="116" href="PatternSynonyms3.html#79" class="Datatype">Nat</a> <a id="120" class="Symbol">→</a> <a id="122" href="PatternSynonyms3.html#79" class="Datatype">Nat</a>
@@ -15,7 +15,7 @@
 <a id="209" class="Keyword">pattern</a> <a id="five"></a><a id="217" href="PatternSynonyms3.html#217" class="InductiveConstructor">five</a>  <a id="223" class="Symbol">=</a> <a id="225" href="PatternSynonyms3.html#110" class="InductiveConstructor">suc</a> <a id="229" href="PatternSynonyms3.html#190" class="InductiveConstructor">four</a>
 
 <a id="235" class="Keyword">data</a> <a id="Bot"></a><a id="240" href="PatternSynonyms3.html#240" class="Datatype">Bot</a> <a id="244" class="Symbol">:</a> <a id="246" class="PrimitiveType">Set</a> <a id="250" class="Keyword">where</a>
-\end{code}<a id="266" class="Comment">
+<a id="256" class="Markup">\end{code}</a><a id="266" class="Background">
 
 \end{document}
 </a></pre></body></html>
