--- a/test/LaTeXAndHTML/succeed/Tag.html
+++ b/test/LaTeXAndHTML/succeed/Tag.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Tag</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Tag</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage[references]{agda}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="75" class="Markup">\begin{code}</a>
 <a id="88" class="Keyword">module</a> <a id="95" href="Tag.html" class="Module">Tag</a> <a id="99" class="Keyword">where</a>
 
 <a id="106" class="Keyword">module</a> <a id="Apa"></a><a id="113" href="Tag.html#113" class="Module">Apa</a> <a id="117" class="Keyword">where</a>
@@ -26,7 +26,7 @@
 <a id="262" class="Keyword">postulate</a>
   <a id="α"></a><a id="274" href="Tag.html#274" class="Postulate">α</a>   <a id="278" class="Symbol">:</a> <a id="280" class="PrimitiveType">Set</a>
   <a id="_∘_"></a><a id="286" href="Tag.html#286" class="Postulate Operator">_∘_</a> <a id="290" class="Symbol">:</a> <a id="292" class="PrimitiveType">Set</a>
-\end{code}<a id="306" class="Comment">
+<a id="296" class="Markup">\end{code}</a><a id="306" class="Background">
 
 \begin{tabular}{ll}
   Name &amp; Test \\
