--- a/test/LaTeXAndHTML/succeed/TeXExtension.html
+++ b/test/LaTeXAndHTML/succeed/TeXExtension.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>TeXExtension</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>TeXExtension</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 
 \begin{document}
 
 Foo
 
-</a>\begin{code}
+</a><a id="67" class="Markup">\begin{code}</a>
 
 <a id="81" class="Keyword">module</a> <a id="88" href="TeXExtension.html" class="Module">TeXExtension</a> <a id="101" class="Keyword">where</a>
 
@@ -17,7 +17,7 @@ Foo
   <a id="b"></a><a id="168" href="TeXExtension.html#168" class="Function">b</a> <a id="170" class="Symbol">:</a> <a id="172" href="TeXExtension.html#115" class="Datatype">Bool</a>
   <a id="179" href="TeXExtension.html#168" class="Function">b</a> <a id="181" class="Symbol">=</a> <a id="183" href="TeXExtension.html#152" class="InductiveConstructor">false</a>
 
-\end{code}<a id="200" class="Comment">
+<a id="190" class="Markup">\end{code}</a><a id="200" class="Background">
 
   c : Bool
   c = broccoli
