--- a/test/LaTeXAndHTML/succeed/ThreeNewLines.html
+++ b/test/LaTeXAndHTML/succeed/ThreeNewLines.html
@@ -1,16 +1,16 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>ThreeNewLines</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>ThreeNewLines</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 
 \begin{document}
 
-</a>\begin{code}
+</a><a id="63" class="Markup">\begin{code}</a>
 
 
 <a id="78" class="Keyword">module</a> <a id="85" href="ThreeNewLines.html" class="Module">ThreeNewLines</a> <a id="99" class="Keyword">where</a>
 
 
-\end{code}<a id="117" class="Comment">
+<a id="107" class="Markup">\end{code}</a><a id="117" class="Background">
 \end{document}
 </a></pre></body></html>
