--- a/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
+++ b/test/LaTeXAndHTML/succeed/Trailing-whitespace.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>Trailing-whitespace</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>Trailing-whitespace</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 
 \usepackage{agda}
 \AgdaNoSpaceAroundCode{}
@@ -7,51 +7,51 @@
 \begin{document}
 
 \hrule
-</a>\begin{code}
+</a><a id="95" class="Markup">\begin{code}</a>
 <a id="108" class="Keyword">postulate</a>
   
   <a id="A"></a><a id="123" href="Trailing-whitespace.html#123" class="Postulate">A</a> <a id="125" class="Symbol">:</a> <a id="127" class="PrimitiveType">Set</a>  
   <a id="B"></a><a id="135" href="Trailing-whitespace.html#135" class="Postulate">B</a> <a id="137" class="Symbol">:</a> <a id="139" class="PrimitiveType">Set</a>  
-\end{code}<a id="155" class="Comment">
+<a id="145" class="Markup">\end{code}</a><a id="155" class="Background">
 \hrule
-</a>\begin{code}
+</a><a id="163" class="Markup">\begin{code}</a>
   
-\end{code}<a id="189" class="Comment">
+<a id="179" class="Markup">\end{code}</a><a id="189" class="Background">
 \hrule
-</a>\begin{code}
+</a><a id="197" class="Markup">\begin{code}</a>
 
-\end{code}<a id="221" class="Comment">
+<a id="211" class="Markup">\end{code}</a><a id="221" class="Background">
 \hrule
-</a>\begin{code}
-\end{code}<a id="252" class="Comment">
+</a><a id="229" class="Markup">\begin{code}</a>
+<a id="242" class="Markup">\end{code}</a><a id="252" class="Background">
 \hrule
-</a>\begin{code}  
-  \end{code}<a id="287" class="Comment">
+</a><a id="260" class="Markup">\begin{code}  </a>
+  <a id="277" class="Markup">\end{code}</a><a id="287" class="Background">
 \hrule
-  </a>\begin{code}  
-\end{code}<a id="322" class="Comment">
+  </a><a id="297" class="Markup">\begin{code}  </a>
+<a id="312" class="Markup">\end{code}</a><a id="322" class="Background">
 \hrule
-  </a>\begin{code}  
-    \end{code}<a id="361" class="Comment">
+  </a><a id="332" class="Markup">\begin{code}  </a>
+    <a id="351" class="Markup">\end{code}</a><a id="361" class="Background">
 \hrule
-</a>\begin{code}
+</a><a id="369" class="Markup">\begin{code}</a>
 <a id="382" class="Keyword">module</a> <a id="389" href="Trailing-whitespace.html#389" class="Module">_</a> <a id="391" class="Keyword">where</a>
-\end{code}<a id="407" class="Comment">
-</a>\begin{code}
+<a id="397" class="Markup">\end{code}</a><a id="407" class="Background">
+</a><a id="408" class="Markup">\begin{code}</a>
   
   <a id="426" class="Keyword">postulate</a>
     <a id="440" href="Trailing-whitespace.html#440" class="Postulate">C</a> <a id="442" class="Symbol">:</a> <a id="444" class="PrimitiveType">Set</a>
-\end{code}<a id="458" class="Comment">
+<a id="448" class="Markup">\end{code}</a><a id="458" class="Background">
 \hrule
 \begin{AgdaAlign}
-</a>\begin{code}
+</a><a id="484" class="Markup">\begin{code}</a>
 <a id="497" class="Keyword">postulate</a>
   <a id="F"></a><a id="509" href="Trailing-whitespace.html#509" class="Postulate">F</a>  <a id="512" class="Symbol">:</a> <a id="514" class="PrimitiveType">Set</a> <a id="518" class="Symbol">→</a> <a id="520" class="PrimitiveType">Set</a>
   <a id="X"></a><a id="526" href="Trailing-whitespace.html#526" class="Postulate">X</a>  <a id="529" class="Symbol">:</a> <a id="531" href="Trailing-whitespace.html#509" class="Postulate">F</a>  
-\end{code}<a id="545" class="Comment">
-</a>\begin{code}
+<a id="535" class="Markup">\end{code}</a><a id="545" class="Background">
+</a><a id="546" class="Markup">\begin{code}</a>
           <a id="569" href="Trailing-whitespace.html#123" class="Postulate">A</a>
-\end{code}<a id="581" class="Comment">
+<a id="571" class="Markup">\end{code}</a><a id="581" class="Background">
 \end{AgdaAlign}
 \hrule
 
