--- a/test/LaTeXAndHTML/succeed/UnicodeInput.html
+++ b/test/LaTeXAndHTML/succeed/UnicodeInput.html
@@ -1,14 +1,14 @@
 <!DOCTYPE HTML>
-<html><head><meta charset="utf-8"><title>UnicodeInput</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Comment">\documentclass{article}
+<html><head><meta charset="utf-8"><title>UnicodeInput</title><link rel="stylesheet" href="Agda.css"></head><body><pre><a id="1" class="Background">\documentclass{article}
 \usepackage{agda}
 \begin{document}
 
-</a>\begin{code}
+</a><a id="61" class="Markup">\begin{code}</a>
 <a id="74" class="Keyword">data</a> <a id="αβγδεζθικλμνξρστυφχψω"></a><a id="79" href="UnicodeInput.html#79" class="Datatype">αβγδεζθικλμνξρστυφχψω</a> <a id="101" class="Symbol">:</a> <a id="103" class="PrimitiveType">Set₁</a> <a id="108" class="Keyword">where</a>
 
 <a id="115" class="Keyword">postulate</a>
   <a id="→⇒⇛⇉⇄↦⇨↠⇀⇁"></a><a id="127" href="UnicodeInput.html#127" class="Postulate">→⇒⇛⇉⇄↦⇨↠⇀⇁</a> <a id="138" class="Symbol">:</a> <a id="140" class="PrimitiveType">Set</a>
-\end{code}<a id="154" class="Comment">
+<a id="144" class="Markup">\end{code}</a><a id="154" class="Background">
 
 \[
 ∀X [ ∅ ∉ X ⇒ ∃f:X ⟶  ⋃ X\ ∀A ∈ X (f(A) ∈ A) ]
